# duanDB

./: .gitignore  .umirc.ts  eslint.config.cjs  package.json  pnpm-lock.yaml  push.md  readme.md  stylelint.config.cjs  typings.d.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-08-motion-design.md
docs/superpowers/specs/: 2026-04-08-motion-design.md
public/: monaco-nls-zh-hans.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: connection.rs  console.rs  database.rs  export.rs  helpers.rs  metadata.rs  mod.rs  sql.rs  table.rs  updater.rs
src-tauri/src/db/: local.rs  mod.rs  pool.rs
src-tauri/src/models/: common.rs  connection.rs  metadata.rs  mod.rs  result.rs
src-tauri/src/mysql/: builder.rs  metadata.rs  mod.rs  types.rs
src/assets/font/: iconfont.json
src/blocks/AppTitleBar/: index.less  index.tsx
src/constants/: appConfig.ts  common.ts  database.ts  editTable.ts  table.ts  tree.ts  workspace.ts
src/hooks/: useFocusData.ts  usePollRequestService.ts
src/i18n/: index.tsx
src/indexedDB/: index.ts
src/pages/: document.ejs
src/service/: base.ts  config.ts  connection.ts  history.ts  misc.tsx  sql.ts  tauri-bridge.ts  user.ts
src/styles/: antd.less  global.less  motion.less  var.less
src/theme/: common.ts
src/typings/: database.ts  index.ts  setting.ts  tree.ts  user.ts
src/utils/: database.ts  eventSource.ts  file.ts  globalMessage.ts  index.ts  localStorage.ts  sql.ts  tauri.ts
(+184 files in other folders)
