[package]
name = "app"
version = "0.5.3"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "mysql", "sqlite", "chrono", "rust_decimal"] }
rust_decimal = "1"
chrono = { version = "0.4", features = ["serde"] }
sqlformat = "0.3"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
indexmap = "2"
futures = "0.3"
